# oelsmann24-verticallandmotion

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
modules/oelsmann24/verticallandmotion/: pipeline.yml  vlm_postprocess.py  vlm_preprocess.py
src/oelsmann24_verticallandmotion/: cli.py  vlm_postprocess.py  vlm_preprocess.py
