[project]
name = "oelsmann24-verticallandmotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "netcdf4>=1.7.2",
    "numpy==2.2.3",
    "scipy>=1.17.0",
    "xarray>=2025.12.0",
]

[project.scripts]
oelsmann24-verticallandmotion = "oelsmann24_verticallandmotion:cli.main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
